2007-12-09  Benjamin Zores <ben@geexbox.org>

	* new public release (Version 1.1a).

2007-12-04  Benjamin Zores <ben@geexbox.org>

	* new public release (Version 1.1).

2007-11-04  Benjamin Zores <ben@geexbox.org>

	* much complete DLNA support through libdlna.

2007-07-30  Benjamin Zores <ben@geexbox.org>

	* MacOSX build fix.

2007-07-05  Alexis Saettler <asbin@asbin.org>

	* new public release (Version 1.0).

2007-06-26  Benjamin Zores  <ben@geexbox.org>

	* fix for XboX 360 file discovery (patch by Keith Brindley).

2007-06-25  Benjamin Zores  <ben@geexbox.org>

	* added support for DLNA (Digital Living Network Alliance),
	  the wonderful closed-source marketing UPnP++ specification.
	  uShare is now compliant with PlayStation 3 UPnP/DLNA Media Renderer.

2007-02-26  Alexis Saettler <asbin@asbin.org>

	* new public release (Version 0.9.10).
	* fixed http 404 error which prevented ushare 0.9.9 release to work.

2007-02-25  Alexis Saettler <asbin@asbin.org>

	* new public release (Version 0.9.9).
	* fixed bug with localization, use now --localedir configure's
	  option to set location of .mo files.

2007-01-23  Benjamin Zores  <ben@geexbox.org>

	* make libupnp >= 1.4.2 a requirement.

2007-01-20  Benjamin Zores  <ben@geexbox.org>

	* added support for FreeBSD.

2007-01-19  Benjamin Zores  <ben@geexbox.org>

	* use a RedBlack balanced tree searching and sorting algorithm
	  instead of the recursive one. It avoids recursive calls, takes
	  less memory (perfect for embedded systems) and executes in more
	  "constant time" than the logarithmic style.
	  Original patch by Phil Chandler.	
	* massive memory optimization (uShare now takes 75% less RAM ;-)
	  only not using fixed size URL allocation buffer (a 16000+ files
	  collection now only takes 5MB where it used to take 19MB).
	* improved search parsing and matching mechanism (patch by Mostafa
	  Hosseini). XboX360 support is now complete.
	  Please note that to stream video to the XboX, the console should