@@ -513,7 +513,7 @@ metadata_add_container (struct ushare_t *ut,
 void
 free_metadata_list (struct ushare_t *ut)
 {
-  ut->init = 0;
+  ut->init = false;
   if (ut->root_entry)
     upnp_entry_free (ut, ut->root_entry);
   ut->root_entry = NULL;
@@ -572,7 +572,7 @@ build_metadata_list (struct ushare_t *ut)
   }
 
   log_info (_("Found %d files and subdirectories.\n"), ut->nr_entries);
-  ut->init = 1;
+  ut->init = true;
 }
 
 int
